# sio2prom

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: release.yml  rust.yml
cfg/: log4rs.toml  metric_definition.json  metric_query_selection.json  sio2prom.json
cfg/3.6/: metric_definition.json  metric_query_selection.json
grafana/: 0 - PowerFlex - Global.json  1 - PowerFlex - Cluster.json  2 - PowerFlex - SDS.json  3 - PowerFlex - Storage Pools.json  4 - PowerFlex - Volumes.json  5 - PowerFlex - SDC.json  sample_cluster.json  sample_global.json  sample_pool.json  sample_sdc.json  sample_sds.json  sample_volume.json
src/: main.rs
src/sio/: client.rs  metrics.rs  mod.rs  utils.rs
