[package]
name = "sio2prom"
version = "0.2.19"
edition = "2021"
authors = ["Sebastian YEPES F <syepes@gmail.com>"]
keywords = ["prometheus", "metrics", "scaleio", "VxFlex", "PowerFlex"]
license = "Apache-2.0"
description = "ScaleIO / VxFlex / PowerFlex Prometheus Exporter"
homepage = "https://github.com/syepes/sio2prom"
repository = "https://github.com/syepes/sio2prom.git"
exclude = ["*"]
include = [
  "README.md",
  "CHANGELOG.md",
  "src/**/*.rs",
  "benches/**/*.rs",
  "tests/**/*.rs",
  "cfg/*",
  "Cargo.toml",
  "rustfmt.toml",
  "clippy.toml",
]
readme = "README.md"
publish = true

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.21", features = [
  "macros",
  "time",
  "rt-multi-thread",
  "tracing",
] }
console-subscriber = { version = "0.1" }
tokio-metrics = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", default-features = false, features = [
  "std",
  "color",
  "cargo",
  "env",
] }
warp = "0.3"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
color-eyre = { version = "0.6" }

[dev-dependencies]
clippy = { version = "*" }

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.test]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
panic = 'abort'
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
